(docs) Update docs frontpage.
- Fix spacing
- Fix Typo
- Update rich text.

--- a/docs/source/default/patterns/02-molecules/code-block/code-block.css
+++ b/docs/source/default/patterns/02-molecules/code-block/code-block.css
@@ -7,6 +7,10 @@
   @apply my-2;
 }
 
+.code-block {
+  @apply bg-transparent !important;
+}
+
 .code-block__feature--active {
   @apply bg-teal-500;
   @apply bg-opacity-20;
