--- a/docs/source/default/patterns/03-organisms/footer/footer.twig
+++ b/docs/source/default/patterns/03-organisms/footer/footer.twig
@@ -14,7 +14,7 @@
   <div class="bg-black py-6 flex items-center">
     {% embed "@organisms/container/container.twig" %}
       {% block content %}
-        <div class="space-x-8 inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+        <div class="space-x-8 flex sm:ml-auto sm:mt-0 mt-2 justify-center">
           <a
             class="w-12"
             href="https://drupaltwig.slack.com/archives/C01C82BH864" target="_blank" rel="noreferrer noopener"><img
