--- a/docs/source/default/patterns/01-atoms/badge/badge.twig
+++ b/docs/source/default/patterns/01-atoms/badge/badge.twig
@@ -20,6 +20,6 @@
 {#
   Template
 #}
-<div {{ attributes.addClass(['font-sans font-medium cursor-pointer border px-2 text-center py-1 inline-block rounded-full border-black'] | sort | join(' ') | trim) }}>
+<div {{ attributes.addClass(['text-2xl font-sans font-medium cursor-pointer border-2 px-4 text-center py-1 inline-block rounded-full border-black'] | sort | join(' ') | trim) }}>
   {{ text }}
 </div>
