--- a/docs/source/default/patterns/02-molecules/code-block/code-block.twig
+++ b/docs/source/default/patterns/02-molecules/code-block/code-block.twig
@@ -5,14 +5,14 @@
 
 <div
   x-data="{key: '{{ codes|first.key }}'}"
-  class="border border-gray-200 relative overflow-hidden rounded-xl shadow-2xl flex w-full">
+  class="border border-gray-300 relative overflow-hidden rounded-xl flex w-full">
   <div class="absolute inset-0 {{ frame }}"></div>
   <div class="relative w-full flex flex-col"
   >
     <div class="flex-none h-11 flex items-center px-4">
       <div class="flex space-x-1.5">
         <div class="w-3 h-3 border-2 rounded-full border-red-500"></div>
-        <div class="w-3 h-3 border-2 rounded-full border-yellow-500"></div>
+        <div class="w-3 h-3 border-2 rounded-full border-orange-500"></div>
         <div class="w-3 h-3 border-2 rounded-full border-green-500"></div>
       </div>
     </div>
@@ -28,7 +28,7 @@
       </li>
       {% endfor %}
     </ul>
-    <div class="{{ content }} relative border-t border-white border-opacity-10 min-h-0 flex-auto flex flex-col"
+    <div class="{{ content }} relative border-t {% if variant == 'light'%} border-gray-300{% else %} border-white border-opacity-10 {% endif %} min-h-0 flex-auto flex flex-col"
          style="max-height: 450px"
     >
       <div class="w-full flex-auto flex min-h-0 overflow-auto">
@@ -37,11 +37,11 @@
           x-show="key === '{{ code_item.key }}'"
           >
             {% if code_item.code is not empty %}
-          <pre class="flex text-xs md:text-sm">
-            <div class="flex relative block text-white pt-4 pb-4 px-4 overflow-auto js-hightlight-container">
-              <code class="code-block language-{{ code_item.format }}">{{- code_item.code|trim -}}</code>
+          <div class="flex text-xs md:text-sm">
+            <div class="keep-markup flex relative block text-white">
+              <pre class="code-block language-{{ code_item.format }}"><code>{{- code_item.code|trim -}}</code></pre>
             </div>
-          </pre>
+          </div>
             {% endif %}
             {% if code_item.image_url is not empty %}
               <img src="{{ file_url('ws-assets://' ~ code_item.image_url) }}" class="w-full">
