--- a/docs/source/default/tokens/tokens.css
+++ b/docs/source/default/tokens/tokens.css
@@ -1,3 +1,13 @@
+@supports (font-variation-settings: normal) {
+  @font-face {
+    font-family: 'Inter';
+    font-weight: 1 999;
+    font-display: swap;
+    src: local(''),
+    url('fonts/inter/Inter.var.woff2') format('woff2');
+  }
+}
+
 /* inter-regular - latin */
 @font-face {
   font-family: 'Inter';
@@ -5,11 +15,7 @@
   font-weight: 400;
   src: url('fonts/inter/inter-v3-latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
-  url('fonts/inter/inter-v3-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('fonts/inter/inter-v3-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('fonts/inter/inter-v3-latin-regular.woff') format('woff'), /* Modern Browsers */
-  url('fonts/inter/inter-v3-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('fonts/inter/inter-v3-latin-regular.svg#Inter') format('svg'); /* Legacy iOS */
+  url('fonts/inter/Inter.var.woff2') format('woff2');
 }
 /* inter-600 - latin */
 @font-face {
@@ -24,6 +30,7 @@
   url('fonts/inter/inter-v3-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
   url('fonts/inter/inter-v3-latin-600.svg#Inter') format('svg'); /* Legacy iOS */
 }
+
 html {
   height: 100%;
 }
