WS #159: section updated.

--- a/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.twig
@@ -13,10 +13,12 @@
 
 {# SETTINGS #}
 {% set bg_classes = ([
-  pattern_configuration('container', '', 'bg')[bg],
+  'relative',
+  pattern_configuration('container', '', 'bg')[bg]
 ] | sort | join(' ') | trim )%}
 
 {% set classes = ([
+  is_layout_builder == false ? pattern_configuration('container', '', 'margin_top')[margin_top],
   pattern_configuration('container', '', 'padding_x')[padding_x],
   pattern_configuration('container', '', 'padding_top')[padding_top],
   pattern_configuration('container', '', 'padding_bottom')[padding_bottom],
@@ -28,14 +30,15 @@
 {% set attributes = attributes|default(create_attribute()) %}
 
 {# TEMPLATE #}
-{% if bg %}
+{% if bg or bg_image or is_relative%}
 <div {{ create_attribute().addClass(bg_classes) }}>
-{% endif %}
+  {{ bg_image }}
+  {% endif %}
   <div {{ attributes.addClass(classes) }}>
     {% block content %}
-    {{ content }}
+      {{ content }}
     {% endblock %}
   </div>
-{% if bg %}
+  {% if bg or bg_image or is_relative%}
 </div>
 {% endif %}
