--- a/starter-kits/bootstrap/source/default/tokens/exports/_font-sizes-display.scss
+++ b/starter-kits/bootstrap/source/default/tokens/exports/_font-sizes-display.scss
@@ -1,8 +1,7 @@
 @import "../_tokens";
 
-:export {
-  display1: $display1-size;
-  display2: $display2-size;
-  display3: $display3-size;
-  display4: $display4-size;
+@each $name, $value in $display-font-sizes {
+  :export{
+    #{$name}: $value;
+  }
 }
