--- a/starter-kits/tailwind/source/default/patterns/02-molecules/table/table.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/table/table.twig
@@ -25,15 +25,10 @@
     </thead>
     <tbody class="flex flex-1 md:table-row-group overflow-auto">
       {% for row in rows %}
-        {% set color = ([
-          row.color == 'green' ? "bg-green-500",
-          row.color == 'red' ? "bg-red-500",
-          row.color == 'yellow' ? "bg-yellow-300"
-        ] | sort | join(' ') | trim )%}
         <tr class="grid flex-1 md:table-row">
-          <td class="{{ color }} {{ classes }}"></td>
+          <td class="{{ classes }}"></td>
           {% for cell in row.cells %}
-            <td class="font-sans text-center md:text-left border-b pt-2 pl-4 pb-1">
+            <td class="font-sans text-center md:text-left border-b pt-2 pb-1">
               {{ cell }}
             </td>
           {% endfor %}
