WS #163: new navigation menu fix.

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -2,8 +2,7 @@
 
 {% import _self as menus %}
 {% macro create_dropdownIndicator(menu_level) %}
-  <span class="{{ menu_level == 1 ? 'float-right transform center-origin transition duration-100 ease-in lg:-rotate-90 lg:px-3' : 'float-right lg:hidden transform center-origin transition duration-100 ease-in' }}"
-        :class="{'rotate-180': submenuIsOpen, 'rotate-0': !submenuIsOpen}">
+  <span class="">
       {% include "@atoms/svg/_svg--icon.twig" with {
         fill_color: menu_level == 1 ? 'white lg:hover:text-black' : 'white',
         size: 'w-5 h-5',
@@ -19,8 +18,9 @@
     menu_level == 1 ? 'lg:bg-gray-300 lg:absolute bg-teal-700 lg:pt-2' : 'lg:absolute lg:top-0',
   ] | sort | join(' ') | trim ) %}
   {% set link_classes = ([
-    menu_level == 1 ? 'font-bold px-7 py-4 border-b w-full block cursor-pointer lg:flex lg:space-x-15 lg:px-2 lg:py-3 lg:hover:text-black lg:hover:bg-yellow-300',
-    menu_level == 2 ? 'font-bold px-7 py-4 border-b w-full block cursor-pointer lg:font-normal lg:text-sm lg:px-0 lg:py-1 lg:whitespace-nowrap lg:hover:text-gray-500'
+    'flex',
+    menu_level == 1 ? 'font-bold lg:hover:text-black lg:hover:bg-yellow-300 border-b w-full block cursor-pointer lg:flex lg:space-x-15 lg:px-2 lg:py-3',
+    menu_level == 2 ? 'font-bold border-b w-full block cursor-pointer lg:font-normal lg:text-sm lg:px-0 lg:py-1 lg:whitespace-nowrap lg:hover:text-gray-500'
   ] | sort | join(' ') | trim ) %}
 
   <div class="{{ container_classes }}"
@@ -32,11 +32,19 @@
         <ul>
           {% for item in row %}
             <li {% if item.below %} x-data="Drupal.behaviors.wingsuitMenu()" @mouseenter="processed = true;submenuDirection=getSubmenuDirection($el);" @mouseleave="processed = false" {% endif %}
-              :class="{ 'menu-processed' : processed == true }" data-menu-target="submenu" data-menu-level="{{ menu_level }}">
-              <a href="{{ item.url }}" class="{{ link_classes }}" {% if item.below %} @click="submenuIsOpen = !submenuIsOpen;" {% endif %}>
-                <span>{{ item.title }}</span>
-                {% if item.below %} {{ menus.create_dropdownIndicator(menu_level) }}{% endif %}
-              </a>
+              :class="{ 'menu-processed' : processed == true }" data-menu-target="submenu"
+              data-menu-level="{{ menu_level }}">
+              <div class="{{ link_classes }} px-7 py-4">
+                <a href="{{ item.url }}" class="flex-1">
+                  {{ item.title }}
+                </a>
+                {% if item.below %}
+                  <div class="{{ menu_level == 1 ? 'float-right transform center-origin transition duration-100 ease-in lg:-rotate-90 lg:px-3' : 'float-right lg:hidden transform center-origin transition duration-100 ease-in' }} cursor-pointer" {% if item.below %} @click="submenuIsOpen = !submenuIsOpen;" {% endif %}
+                    :class="{'rotate-180': submenuIsOpen, 'rotate-0': !submenuIsOpen}">
+                    {{ menus.create_dropdownIndicator(menu_level) }}
+                  </div>
+                {% endif %}
+              </div>
               {% if item.below %}
                 {{ menus.create_submenu(item.below, menu_level + 1) }}
               {% endif %}
@@ -55,18 +63,24 @@
 <ul class="{{ list_classes }}">
   {% for item in items %}
     {% set link_classes = ([
-      'font-bold px-7 py-4 border-b w-full block cursor-pointer lg:px-0 lg:py-0 lg:border-0 lg:inline-block',
+      'font-bold w-full block cursor-pointer lg:inline-block',
       item.asCta ? "lg:font-display lg:font-bold lg:bg-yellow-300 lg:text-gray-900 lg:uppercase lg:!py-2 lg:!px-3",
     ] | sort | join(' ') | trim ) %}
     <li {% if item.below %}
       x-data="Drupal.behaviors.wingsuitMenu()"
       data-menu-target="submenu" {% endif %} data-menu-level="{{ menu_level }}">
-      <a href="{{ item.url }}" class="{{ link_classes }}" {% if item.below %} @click="submenuIsOpen = !submenuIsOpen;" {% endif %}>
-        {{ item.title }}
+      <div class="flex border-b lg:border-0 px-7 lg:px-0 py-4 lg:py-0">
+        <a href="{{ item.url }}" class="{{ link_classes }}">
+          {{ item.title }}
+        </a>
         {% if item.below %}
-          {{ menus.create_dropdownIndicator(menu_level) }}
+          <div
+            class="{{ menu_level == 1 ? 'float-right transform center-origin transition duration-100 ease-in lg:-rotate-90 lg:px-3' : 'float-right lg:hidden transform center-origin transition duration-100 ease-in' }} cursor-pointer" {% if item.below %} @click="submenuIsOpen = !submenuIsOpen;" {% endif %}
+            :class="{'rotate-180': submenuIsOpen, 'rotate-0': !submenuIsOpen}">
+            {{ menus.create_dropdownIndicator(menu_level) }}
+          </div>
         {% endif %}
-      </a>
+      </div>
       {% if item.below %}
         {{ menus.create_submenu(item.below, menu_level + 1) }}
       {% endif %}
