--- a/starter-kits/tailwind/source/default/patterns/02-molecules/language-select/language-select.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/language-select/language-select.twig
@@ -7,13 +7,15 @@
         size: 'w-5 h-5',
       } only %}
     </div>
-    {% include "@atoms/svg/_svg--icon.twig" with {
-      icon: 'arrow',
-      fill_color: 'text-yellow-500',
-      size: 'w-2.5 h-2.5',
-    } only %}
+    <div :class="{'transform rotate-90 transition duration-75 ease-in-out': languageSwitcherOpen, '': !languageSwitcherOpen}">
+      {% include "@atoms/svg/_svg--icon.twig" with {
+        icon: 'arrow',
+        fill_color: 'text-yellow-500',
+        size: 'w-2.5 h-2.5',
+      } only %}
+    </div>
   </div>
-  <ul class="absolute left-1/2 p-4 top-10 bg-gray-400 box-shadow rounded transform -translate-x-1/2 hidden" :class="{'block': languageSwitcherOpen, 'hidden': !languageSwitcherOpen}">
+  <ul class="absolute left-1/4 p-4 top-10 bg-gray-400 box-shadow rounded transform -translate-x-1/2 hidden" :class="{'block': languageSwitcherOpen, 'hidden': !languageSwitcherOpen}">
     {%- for key, item in links -%}
       {%- if item.link and item.langcode != language -%}
         <li class="last:mb-0 mb-4 group">
