--- a/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.twig
@@ -10,6 +10,7 @@
 {# Defaults #}
 {% set width = width|default('default') %}
 {% set padding_x = width != 'full' ? padding_x|default('default') : '' %}
+{% set padding_bottom = padding_bottom|default('default') %}
 
 {# SETTINGS #}
 {% set bg_classes = ([
