--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
@@ -16,7 +16,7 @@
   alignment == 'center' ? 'text-center rounded': '',
   bg_color == 'gray' ? 'bg-gray-200',
   bg_color == 'blue' ? 'bg-blue-200',
-  'w-full flex  max-w-xl',
+  'w-full flex  max-w-xl flex-1',
   'border-2 border-gray-200 rounded-lg overflow-hidden w-full',
   variant == 'horizontal' ? 'flex-col md:flex-row' : 'flex-col'
 ] | sort | join(' ') | trim ) %}
@@ -26,7 +26,7 @@
 {# TEMPLATE #}
 <{{ element }} {{ attributes }}>
   {% if image is not empty %}
-    <div class="flex-1">
+    <div class="flex-0">
       {% block image %}
         {{ image }}
       {% endblock %}
