ISSUE-162: Fix render info function name.

--- a/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -24,6 +24,7 @@
         {{ pattern_preview('card', {'headline': ' Second Card'}, 'default') }}
       {% endblock %}
       {% block column_3 %}
+        Image null
         {{ pattern_preview('card', {'headline': 'Overwritten headline', 'image': null}, 'default') }}
       {% endblock %}
     {% endembed %}
