(docs) Add initial docs documentation.

--- a/starter-kits/tailwind/apps/drupal/templates/layout/off-canvas-page-wrapper.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/layout/off-canvas-page-wrapper.html.twig
@@ -18,7 +18,7 @@
  */
 #}
 {% if children %}
-  <div class="dialog-off-canvas-main-canvas h-full flex flex-col" data-off-canvas-main-canvas>
+  <div class="dialog-off-canvas-main-canvas flex flex-col flex-1" data-off-canvas-main-canvas>
     {{ children }}
   </div>
 {% endif %}
