--- a/docs/source/default/patterns/03-organisms/download/download.twig
+++ b/docs/source/default/patterns/03-organisms/download/download.twig
@@ -8,7 +8,7 @@
 </div>
 {% endset %}
 {{ pattern_preview('section_code', {
-  bg: bg|default('blue-light'),
+  bg: bg|default('gray-lighter'),
   width: width|default('default'),
   padding_top: padding_top|default('default'),
   content: intro,
