--- a/docs/source/default/patterns/03-organisms/footer/footer.twig
+++ b/docs/source/default/patterns/03-organisms/footer/footer.twig
@@ -1,5 +1,5 @@
 <footer class="text-gray-700 body-font">
-  <div class="bg-yellow">
+  <div class="bg-yellow-100">
     {% if footer_menu is not empty %}
       {% embed "@organisms/container/container.twig" %}
         {% block content %}
