--- a/docs/source/default/patterns/04-templates/page/page.twig
+++ b/docs/source/default/patterns/04-templates/page/page.twig
@@ -21,7 +21,7 @@
 
 {% include "@templates/site-container.twig" with {
   menu: menu,
-  footer_menu: null,
+  footer_menu: footer_menu,
   show_hamburger: true,
   content: content,
 } %}
