--- a/presets/pages/src/templates/app-pages/pages/front/front.pages.jsx.ejs
+++ b/presets/pages/src/templates/app-pages/pages/front/front.pages.jsx.ejs
@@ -1,12 +1,42 @@
 import 'protons';
 import MDX from './front.mdx';
 
-const template = require('./front.twig');
-
 export default {
   path: '/',
-  template,
-  MDX,
+  pattern: {
+      label: 'Homepage',
+      extends: ['page'],
+      fields: {
+        menu: {
+          preview: '',
+        },
+        content: {
+          preview: [
+            { id: 'hero' },
+            {
+              id: 'section_code',
+              fields: tokens,
+            },
+            {
+              id: 'section_code',
+              fields: component,
+            },
+            {
+              id: 'section_code',
+              fields: document,
+            },
+            {
+              id: 'section_code',
+              fields: love,
+            },
+            {
+              id: 'download',
+            },
+          ],
+        },
+      },
+    },
+  }
   vars: {
     sample: 'data',
   },
